--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -13,55 +13,46 @@ on:
   pull_request:
     branches: [ "master" ]
 
+# jdk를 통해서 application.properties를 만들고 jar를 만들고 scp -> docker compose up
 jobs:
   build:
 
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
+    - uses: actions/checkout@v4 #라이브러리 이런거
+    - name: Set up JDK 21       #역할을 지정
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
+        java-version: '21'
         distribution: 'temurin'
 
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+    - name : insert application.properties
+      run: |
+        mkdir -p src/main/resources
+        echo "${{ secrets.PROPERTIES }}" > src/main/resources/application.properties
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
 
-    # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
-    # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
-    #
-    # - name: Setup Gradle
-    #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-    #   with:
-    #     gradle-version: '8.9'
-    #
-    # - name: Build with Gradle 8.9
-    #   run: gradle build
 
-  dependency-submission:
+    - name: Build with Gradle Wrapper = make jar
+      run: ./gradlew build -x test
 
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    - name : scp (sever copy protocol) -> jar파일을 vm 올리는 작업
+      uses: appleboy/scp-action@master  # .jar 파일 원격 서버로 복사
       with:
-        java-version: '17'
-        distribution: 'temurin'
+          username: ubuntu
+          host: ${{ secrets.SSH_HOST }}
+          key: ${{ secrets.SSH_KEY }}
+          source:
+            build/libs/*.jar
+          target: "/home/ubuntu/docker-last"
 
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-    # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+    - name : docker compose 실행(mysql, spring, nginx 실행)
+      uses: appleboy/ssh-action@master
+      with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ubuntu
+            key: ${{ secrets.SSH_KEY }}
+            script: |
+              cd ~/docker-last
+              docker compose up -d
